fixed vh and button collapsing on footer

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -38,6 +38,7 @@ h3 {
 body {
   background-color: $light-color;
   font-family: $body-font;
+  height: 97vh;
 }
 
 p {
@@ -51,7 +52,6 @@ p {
 .wrapper {
   max-width: 1600px;
   margin: 0 auto;
-  height: 97vh;
 }
 
 ul,
@@ -98,7 +98,7 @@ li {
 
 .affinity {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 46%;
   color: $light-color;
   h2 {
@@ -151,6 +151,7 @@ button {
   padding: 20px 15px;
   font-size: 2rem;
   border-radius: 25px;
+  margin-bottom: 1%;
   &:hover {
     color: $dark-color;
     background-color: $accent-color;
